--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,18 +16,24 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.BTL"
         tools:targetApi="31">
-
         <activity
-            android:name=".LoginActivity"
+            android:name=".admin.RevenueActivity"
+            android:exported="false" />
+        <activity
+            android:name=".admin.AdminHomeActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
-        <activity android:name=".ThanhToanActivity" android:exported="false" />
-        <activity android:name=".GioHangActivity" android:exported="false" />
+        <activity
+            android:name=".ThanhToanActivity"
+            android:exported="false" />
+        <activity
+            android:name=".GioHangActivity"
+            android:exported="false" />
         <activity android:name=".RegisterActivity" />
         <activity android:name=".HomeActivity" />
         <activity android:name=".ResetPasswordActivity" />
