--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -39,6 +39,7 @@
         <activity android:name=".ResetPasswordActivity" />
         <activity android:name=".ProfileActivity" />
         <activity android:name=".DetailActivity" />
+        <activity android:name=".UserDetailActivity" />
         <activity android:name=".admin.ManageUsersActivity" />
         <activity android:name=".admin.ManageMoviesActivity" />
         <activity android:name=".admin.ManagerCinemaActivity" />
